correção no display dos outputs

--- a/calculadora_imc/index.html
+++ b/calculadora_imc/index.html
@@ -16,8 +16,8 @@
         <div id="corpo">
             <div id="informacoes">
                 <form id="formulario">
-                    <input type="number" id="altura" placeholder="altura" class="_input">
-                    <input type="number" id="peso" placeholder="peso" class="_input">
+                    <input type="number" id="altura" placeholder="altura" class="_input" min="1" max="3">
+                    <input type="number" id="peso" placeholder="peso" class="_input" min="30" max="300">
                     <button type="button" id="botao" onclick="calcular()">calcular</button>
                 </form>
             </div>
