adicionado darkmode e whitemode

--- a/calculadora_imc/index.html
+++ b/calculadora_imc/index.html
@@ -6,7 +6,11 @@
     <title>calculadora imc</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body>
+<body id="corpo">
+
+    <div id="darkMode">
+        <button type="button" id="botao_darkMode" onclick="darkMode()">MODO ESCURO</button>
+    </div>
  
     <div id="calculadora">
         <div id="cabeca">
