--- a/atividades_genericas/4=10/index.html
+++ b/atividades_genericas/4=10/index.html
@@ -10,7 +10,7 @@
     <input type="number" id="num2">
     <input type="number" id="num3">
     <input type="number" id="num4">
-    <button type="button" onclick=""></button>
+    <button type="button" onclick="testaCombinacoes()">testar</button>
     <script src="script.js"></script>
 </body>
 </html>
