--- a/atividades_genericas/ativReplicar/index.html
+++ b/atividades_genericas/ativReplicar/index.html
@@ -29,7 +29,7 @@
 
         <div id="containerHeader2">
             <div id="perfil">
-                <img src="img/perfil.png" alt="" height = "25px;">
+                <img src="img/perfil.png" alt="" height = "40px">
             </div>
     
             <div id="carrinho">
